--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -37,8 +37,8 @@ copy:
 # formal:
 #   icon: link || the description
 social:
-  fab fa-github: https://github.com/SP12893678 || Github
-  fab fa-linkedin: https://linkedin.com/in/俊閎-彭-2b9834158 || LinkedIn
+  # fab fa-github: https://github.com/SP12893678 || Github
+  # fab fa-linkedin: https://linkedin.com/in/俊閎-彭-2b9834158 || LinkedIn
 
 # search (搜索)
 # --------------------------------------
@@ -86,10 +86,10 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img: /img/background2.png
+index_img: /img/background2.jpg
 
 # If the banner of page not setting, it will show the top_img
-default_top_img: /img/background2.png
+default_top_img: /img/background2.jpg
 
 # The banner image of archive page
 archive_img:
@@ -151,7 +151,7 @@ post_meta:
 
 # wordcount (字數統計)
 wordcount:
-  enable: false
+  enable: true
   post_wordcount: true
   min2read: true
   total_wordcount: true
@@ -162,7 +162,7 @@ wordcount:
 # 3: auto_excerpt (default)
 # false: do not show the article introduction
 index_post_content:
-  method: 3
+  method: 2
   length: 500 # if you set method to 2 or 3, the length need to config
 
 # Post
@@ -176,7 +176,7 @@ toc:
 
 post_copyright:
   enable: true
-  decode: false
+  decode: true
   license: CC BY-NC-SA 4.0
   license_url: https://creativecommons.org/licenses/by-nc-sa/4.0/
 
@@ -501,7 +501,7 @@ tag_ui: # 留空或 index
 background: 
 
 # Footer Background
-footer_bg: /img/background2.png
+footer_bg: /img/background2.jpg
 
 # the position of bottom right button/default unit: px (右下角按鈕距離底部的距離/默認單位為px)
 rightside-bottom:
@@ -837,6 +837,7 @@ inject:
     - <script src="/js/bubble.js"></script>
     - <link rel="stylesheet" href="/css/tag-diy.css">
 
+
 # CDN
 # Don't modify the following settings unless you know how they work
 # 非必要請不要修改
@@ -925,3 +926,7 @@ CDN:
   prismjs_js: https://cdn.jsdelivr.net/npm/prismjs/prism.min.js
   prismjs_lineNumber_js: https://cdn.jsdelivr.net/npm/prismjs/plugins/line-numbers/prism-line-numbers.min.js
   prismjs_autoloader: https://cdn.jsdelivr.net/npm/prismjs/plugins/autoloader/prism-autoloader.min.js
+
+
+
+  
