--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "version": "5.4.0"
   },
   "dependencies": {
+    "gulp": "^4.0.2",
+    "gulp-html-minifier-terser": "^6.0.1",
     "hexo": "^5.0.0",
     "hexo-admin": "^2.3.0",
     "hexo-generator-archive": "^1.0.0",
@@ -24,6 +26,15 @@
     "hexo-renderer-pug": "^2.0.0",
     "hexo-renderer-stylus": "^2.0.1",
     "hexo-server": "^2.0.0",
-    "hexo-theme-landscape": "^0.0.3"
+    "hexo-theme-landscape": "^0.0.3",
+    "hexo-wordcount": "^6.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-uglify": "^3.0.2"
   }
 }
