--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,8 @@ theme: butterfly
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: https://github.com/SP12893678/blog.git
 
 
 search:
