--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -417,7 +417,7 @@ baidu_analytics:
 
 # Google Analytics
 # https://analytics.google.com/analytics/web/
-google_analytics:
+google_analytics: UA-182309718-1
 
 # Tencent Analytics ID
 # https://mta.qq.com
@@ -440,10 +440,10 @@ microsoft_clarity:
 
 # Google Adsense (谷歌廣告)
 google_adsense:
-  enable: false
+  enable: true
   auto_ads: true
   js: https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js
-  client:
+  client: ca-pub-8883435840385596
   enable_page_level_ads: true
 
 # Insert ads manually (手動插入廣告)
