--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -86,10 +86,10 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img: /img/background2.jpg
+index_img: https://cdn.jsdelivr.net/gh/sp12893678/blog@gh-pages/img/background2.jpg
 
 # If the banner of page not setting, it will show the top_img
-default_top_img: /img/background2.jpg
+default_top_img: https://cdn.jsdelivr.net/gh/sp12893678/blog@gh-pages/img/background2.jpg
 
 # The banner image of archive page
 archive_img:
@@ -502,7 +502,7 @@ tag_ui: # 留空或 index
 background: 
 
 # Footer Background
-footer_bg: /img/background2.jpg
+footer_bg: https://cdn.jsdelivr.net/gh/sp12893678/blog@gh-pages/img/background2.jpg
 
 # the position of bottom right button/default unit: px (右下角按鈕距離底部的距離/默認單位為px)
 rightside-bottom:
@@ -834,6 +834,7 @@ inject:
   head:
     - <link rel="stylesheet" href="/css/custom.css">
     - <link rel="stylesheet" href="/css/tag-diy.css">
+    - <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8883435840385596" crossorigin="anonymous"></script>
     - '<style type="text/css">.app-refresh{position:fixed;top:-2.2rem;left:0;right:0;z-index:99999;padding:0 1rem;font-size:15px;height:2.2rem;transition:all .3s ease}.app-refresh-wrap{display:flex;color:#fff;height:100%;align-items:center;justify-content:center}.app-refresh-wrap a{color:#fff;text-decoration:underline;cursor:pointer}</style>'
   bottom:
     - <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
