--- a/source/_data/widget.yml
+++ b/source/_data/widget.yml
@@ -4,4 +4,4 @@ bottom:
     name: 
     icon:
     order: 999
-    html: <ins class="adsbygoogle" style="display:block" data-ad-format="fluid" data-ad-layout-key="xxxxxxxxxxxx" data-ad-client="ca-pub-8883435840385596" data-ad-slot="xxxxxxxxxx"></ins><script>(adsbygoogle=window.adsbygoogle||[]).push({})</script>
+    html: <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8883435840385596" data-ad-slot="9215689748" data-ad-format="auto" data-full-width-responsive="true"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
