--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "gulp": "^4.0.2",
     "gulp-html-minifier-terser": "^6.0.1",
     "hexo": "^5.0.0",
+    "hexo-autonofollow": "^1.0.1",
     "hexo-deployer-git": "^3.0.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-search": "^2.4.3",
-    "hexo-generator-sitemap": "^2.1.0",
+    "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^4.0.0",
